kubernetes/ingress/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: storyscript-and-storyscriptapp
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  tls:
  - hosts:
    - "*.storyscriptapp.com"
    secretName: storyscriptapp.com
  rules:
  - host: "*.storyscriptapp.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8888
