kubernetes/ingress/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: asyncy-and-asyncyapp-com
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  tls:
  - hosts:
    - grafana.asyncy.com
    secretName: asyncy.com
  rules:
  - host: grafana.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
