kubernetes/ingress/graphql.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graphql
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: storyscript-and-storyscriptapp
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Headers: Content-Type";
spec:
  tls:
  - hosts:
    - api.storyscript.io
    secretName: storyscript.io
  rules:
  - host: api.storyscript.io
    http:
      paths:
      - path: /graphql
        backend:
          serviceName: graphql
          servicePort: 5000
      - path: /graphiql
        backend:
          serviceName: graphql
          servicePort: 5000
      - path: /_postgraphile
        backend:
          serviceName: graphql
          servicePort: 5000
