kubernetes/ingress/hub-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub-api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: asyncy-and-asyncyapp-com
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: localhost:8080";
      more_set_headers "Access-Control-Allow-Headers: Content-Type";
spec:
  tls:
  - hosts:
    - api.hub.asyncy.com
    secretName: asyncy.com
  rules:
  - host: api.hub.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hub-api
          servicePort: 8080
