kubernetes/ingress/nginx-proxy-web-and-blog.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-proxy-web-and-blog
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: storyscript-and-storyscriptapp
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  tls:
  - hosts:
    - asyncy.com
    - blog.asyncy.com
    - www.asyncy.com
    - storyscript.io
    - docs.asyncy.com
    - hub.asyncy.com
    secretName: storyscript.io
  rules:
  - host: asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: api.hub.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: hub.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: docs.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: storyscript.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: www.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
  - host: blog.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy-web-and-blog
          servicePort: 8089
