kubernetes/ingress/sync.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sync
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: api-asyncy-com-and-family
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sync.asyncy.com
    secretName: asyncy.com
  rules:
  - host: sync.asyncy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sync
          servicePort: 5000
